--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -23,17 +23,17 @@
 
     <div class="container">
     <div class="course">
-         <a href="http://127.0.0.1:8005/catalog/umontreal">
+         <a href="{{ edulib_catalog }}/umontreal">
          <img src="{% static "catalog/umontreal.png" %}" alt="Universit&eacute; de Montr&eacute;al" width="400" height="200" /><br>
          </a>
     </div>
     <div class="course">
-         <a href="http://127.0.0.1:8005/catalog/hec">
+         <a href="{{ edulib_catalog }}/hec">
          <img src="{% static "catalog/hec.png" %}" alt="HEC Montr&eacute;al" width="400" height="200" /><br>
          </a>
     </div>
     <div class="course">
-         <a href="http://127.0.0.1:8005/catalog/polymtl">
+         <a href="{{ edulib_catalog }}/polymtl">
          <img src="{% static "catalog/polymtl.png" %}" alt="Polytechnique Montr&eacute;al" width="400" height="200" /><br>
          </a>
     </div>
