--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,37 +1,46 @@
 {% load static %}
   
-<link rel="stylesheet" type="text/css" href="{% static 'catalog/style.css' %}" />
+{# needed for boostrap #}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{# needed for boostrap #}
+
+{# navigation bar from boostrap #}
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a>
+        </div>
+        <div class="container">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Institutions
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+               <li><a href="{{ edulib_catalog }}/umontreal">UMontreal</a></li>
+               <li><a href="{{ edulib_catalog }}/hec">HEC</a></li>
+               <li><a href="{{ edulib_catalog }}/polymtl">PolyMtl</a></li>
+            </ul>
+        </div>
+        </div>
+</nav>
+{# navigation bar from boostrap #}
 
 {% if cours_non_finis %}
-    <h1>Cours disponibles sur EDUlib</h1>
-    <ul>
-
+    <h1>Cours actuellement disponibles sur EDUlib</h1>
+    {# reloading EDUlib style #}
+    <link rel="stylesheet" type="text/css" href="{% static 'catalog/style.css' %}" />
+    {# reloading EDUlib style #}
     <div class="container">
-    {% for cours in cours_non_finis %}
-        <div class="course">
-        <a href="{{ edulib_lms }}/courses/{{ cours.key }}/about">{{ cours.title }}<br>
-        <img alt="IMAGE NON DISPONIBLE" src="{{ cours.image.src }}" width="280" height="160"><br>
-        <strong>Commence le {{ cours.start_affiche }}</strong>
-        </a>
-        </div>
-    {% endfor %}
-    </div>
-    </ul>
-
-    <h1>Cours par institution</h1>
-    <ul>
-
-    <div class="container">
-    {% for ecole in all_ecoles %}
-       <div class="course">
-            <a href="{{ edulib_catalog }}/{{ ecole.nom_court }}">
-            <img src="{% get_static_prefix %}/{{ ecole.logo }}" alt="{{ ecole.nom_long }}" width="400" height="200" /><br>
+        {% for cours in cours_non_finis %}
+            <div class="course">
+            <a href="{{ edulib_lms }}/courses/{{ cours.key }}/about">{{ cours.title }}<br>
+            <img alt="IMAGE NON DISPONIBLE" src="{{ cours.image.src }}" width="280" height="160"><br>
+            <strong>Commence le {{ cours.start_affiche }}</strong>
             </a>
-       </div>
-    {% endfor %}
+            </div>
+        {% endfor %}
     </div>
-
-    </ul>
 {% else %}
     <p>Pas de cours disponibles sur EDUlib</p>
 {% endif %}
