--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -27,7 +27,7 @@
 {# navigation bar from boostrap #}
 
 {% if cours_non_finis %}
-    <h1>Cours actuellement disponibles sur EDUlib</h1>
+    <h1>Cours à venir et actuellement disponibles sur EDUlib</h1>
     {# reloading EDUlib style #}
     <link rel="stylesheet" type="text/css" href="{% static 'catalog/style.css' %}" />
     {# reloading EDUlib style #}
