--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -10,7 +10,10 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a>
+            {# <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a> #}
+            <a class="navbar-brand" href="{% url 'index' %}">
+            <img src="static/catalog/edulib.png" width="75px"/>
+            </a>
         </div>
         <div class="container">
         <div class="dropdown">
