faking css, needs to be reworked by Cédric

--- a/catalog/static/catalog/style.css
+++ b/catalog/static/catalog/style.css
@@ -43,20 +43,34 @@ a:active {
   border: 1px solid green ;
 }
 
+.container2 {
+  display: grid;
+  grid-template-columns: 400px 400px 400px ;
+  background-color: F8F8F8;
+  grid-gap: 25px;
+  justify-content: baseline;
+}
+
 .container {
   display: grid;
   grid-template-columns: 400px 400px 400px ;
   background-color: white;
   grid-gap: 25px;
-  justify-content: space-evenly
+  justify-content: baseline;
+}
+
+.container::before {
+  content: none;
+}
+.container::after {
+  content: none;
 }
 
 .container-menu {
   display: grid;
-  grid-template-columns: 500px 500px 500px ;
   background-color: lightgrey;
   grid-gap: 25px;
-  justify-content: space-evenly
+  justify-content: left;
 }
 
 .box {
@@ -69,10 +83,10 @@ a:active {
 
 .course {
     background-color: lightgrey;
-    width: 400px;
+    width: 380px;
     border: 05px solid blue;
-    padding: 25px;
-    margin: 25px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .institution {
@@ -91,4 +105,12 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.btn-primary {
+    color: #fff;
+    border-color: #2e6da4;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
