--- a/catalog/templates/catalog/unknown.html
+++ b/catalog/templates/catalog/unknown.html
@@ -1,5 +1,5 @@
 {% load static %}
-  
+
 {# needed for boostrap #}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -10,20 +10,26 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a>
+            {# <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a> #}
+            <a class="navbar-brand" href="{% url 'index' %}">
+            <img src="/static/catalog/edulib.png" width="75px"/>
+            </a>
         </div>
-        <div class="container">
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Institutions
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-               <li><a href="{{ edulib_catalog }}/umontreal">UMontreal</a></li>
-               <li><a href="{{ edulib_catalog }}/hec">HEC</a></li>
-               <li><a href="{{ edulib_catalog }}/polymtl">PolyMtl</a></li>
-            </ul>
+        <div class="container2">
+                <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Institutions
+                <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                   <li><a href="{{ edulib_catalog }}/umontreal">UMontreal</a></li>
+                   <li><a href="{{ edulib_catalog }}/hec">HEC</a></li>
+                   <li><a href="{{ edulib_catalog }}/polymtl">PolyMtl</a></li>
+                </ul>
+                </div>
         </div>
-        </div>
+    </div>
 </nav>
 {# navigation bar from boostrap #}
 
-<h1>D&eacute;sol&eacute; aucun cours disponible pour cette institution</h1>
+<link rel="stylesheet" type="text/css" href="{% static 'catalog/style.css' %}" />
+
+i<h1>D&eacute;sol&eacute; aucun cours disponible pour cette institution</h1>
