New version built upon the master prototype.

--- a/catalog/static/catalog/style.css
+++ b/catalog/static/catalog/style.css
@@ -43,34 +43,20 @@ a:active {
   border: 1px solid green ;
 }
 
-.container2 {
-  display: grid;
-  grid-template-columns: 400px 400px 400px ;
-  background-color: F8F8F8;
-  grid-gap: 25px;
-  justify-content: baseline;
-}
-
 .container {
   display: grid;
   grid-template-columns: 400px 400px 400px ;
   background-color: white;
   grid-gap: 25px;
-  justify-content: baseline;
-}
-
-.container::before {
-  content: none;
-}
-.container::after {
-  content: none;
+  justify-content: space-evenly
 }
 
 .container-menu {
   display: grid;
+  grid-template-columns: 500px 500px 500px ;
   background-color: lightgrey;
   grid-gap: 25px;
-  justify-content: left;
+  justify-content: space-evenly
 }
 
 .box {
@@ -83,10 +69,10 @@ a:active {
 
 .course {
     background-color: lightgrey;
-    width: 380px;
+    width: 400px;
     border: 05px solid blue;
-    padding: 10px;
-    margin: 10px;
+    padding: 25px;
+    margin: 25px;
 }
 
 .institution {
@@ -105,12 +91,4 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
-
-.btn-primary {
-    color: #fff;
-    border-color: #2e6da4;
-    justify-content: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
