--- a/catalog/templates/catalog/org_index.html
+++ b/catalog/templates/catalog/org_index.html
@@ -3,7 +3,7 @@
         <section class="home">
             <header class="outer-wrapper">
                 <hgroup class="title">
-                    <h1><img src="{{ORG_MODEL.logo}}" alt="{{ORG_MODEL.long_name}}" width="600" height="200" /></h1>
+                        <a href="{{ ORG_MODEL.org_url }}"><img src="{{ORG_MODEL.logo}}" alt="{{ORG_MODEL.long_name}}" width="600" height="200" /></a>
                 </hgroup>
             </header>
             <p>{{ORG_MODEL.description}}</p>
