--- a/catalog/static/catalog/css/style.css
+++ b/catalog/static/catalog/css/style.css
@@ -3,11 +3,42 @@
 
 body, select {font-family: "Open Sans", Helvetica, Arial, sans-serif;}
 
-.navbar {
+nav.navbar {
     margin-bottom: 0;
+    padding: 0em 15em;
+    color: #0075b4;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
-header.outer-wrapper  {
+nav.navbar h1, nav.navbar ol {
+    display: inline-block;
+    margin: 0em 1em 0.5em 0em;
+}
+
+nav.navbar h1 img {
+    width: 100px;
+    height: auto;
+    margin-top: 5px;
+}
+
+nav.navbar ol {
+    
+}
+
+nav.navbar div.dropdown button {text-transform: uppercase;}
+
+nav.navbar ol.right {
+    float: right;
+    margin-top: 1em;
+    /*
+    position: absolute;
+    right: 10em;
+    top: 1em;
+    */
+}
+
+header.outer-wrapper {
     text-align: center;
     background-image: url('/static/catalog/images/nuages.jpg');
     margin: 0;
@@ -25,9 +56,21 @@ header.outer-wrapper hgroup.title {
     box-sizing: border-box;
     box-shadow: 0 4px 5px 0 rgba(0,0,0,0.5);
     background-color: rgba(255,255,255,0.75);
-    padding: 1.5em;
+    padding: 3em 1em;
     vertical-align: top;
 }
+
+
+section.institution {
+    padding: 50px 200px;
+}
+
+section.institution p {
+    text-align: left;
+    font-size: 16px;
+}
+
+    
 
 hgroup.title h1 {
     margin: 0;
@@ -71,19 +114,13 @@ li.courses-listing-item {
 
 .courses-container .course {
     transition: all 0.125s linear 0s;
-/*
-    box-sizing: border-box;
-    
-    position: relative;
-    width: 100%;
-*/
 }
 
 
 header.course-image {
     height: 154px;
     overflow: hidden;
-    background-color: black;
+    background-color: rgba(0,0,0,0);
 }
 
 header.course-image img {
@@ -113,11 +150,17 @@ li.courses-listing-item a:hover {
     text-decoration: none;
 }
 
+li.courses-listing-item:hover header.course-image {
+    background-color: rgba(0,0,0,1);
+}
+
 li.courses-listing-item:hover header.course-image img {
+    transition: all 0.125s linear 0s;
     opacity: 0.5;
 }
 
 li.courses-listing-item:hover header.course-image div.learn-more {
+    transition: all 0.125s linear 0s;
     opacity: 1.0;
 }
 
